<resources>
    <string name="app_name">ParseFile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="empty_list">No entries to be displayed</string>
    <string name="colon">:</string>
    <string name="entry_name">Entry</string>
    <string name="common_name">Common Name</string>
    <string name="expiry_date">Validity</string>
    <string name="subjectDN">Subject DN</string>
    <string name="algo">Algorithm</string>
    <string name="encrypt">Encrypt</string>
    <string name="text_to_encrypt">Enter text to encrypt</string>
    <string name="encrypted_value">Encrypted Value :</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>